--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -113,7 +113,7 @@ nav ul li.dropdown .dropdown-menu li a:hover {
 .home-content {
   flex: 1; /* Push the footer to the bottom by taking up available space */
   text-align: center;
-  padding: 20px;
+  padding: 10px;
 }
 
 
@@ -212,6 +212,7 @@ main {
 .session-expired-message p {
   font-size: 25px;
   margin: 0;
+  padding-bottom: 20px;
   color: white;
   font-family: "Bebas Neue", sans-serif;
 }
@@ -236,6 +237,7 @@ h1{
 
 p{
   font-size: 30px;
+  
 }
 
 .sign-out-img {
